--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -110,6 +110,7 @@ out: ../css/style.css, sourcemap: true, compress: true
         &:active {
           background-color: white;
           box-shadow: none;
+          outline: none;
         }
 
         .glyphicon {
@@ -230,7 +231,7 @@ out: ../css/style.css, sourcemap: true, compress: true
               a {
                 .icon {
                   background-image: url(../img/logo-opencode.png);
-                  background-size: 45px; 
+                  background-size: 45px;
                 }
               }
             }
