--- a/application/modules/default/views/scripts/user/avatar.phtml
+++ b/application/modules/default/views/scripts/user/avatar.phtml
@@ -28,8 +28,7 @@ if(null != $request->getParam('debug')) {
     $debugMe = $request->getParam('debug', 0);
 
     if($debugMe == 1) {
-        var_dump($file_out);
-        die;
+        print_r('ImgUrl1: ' . $file_out);
     }
 }
 
@@ -41,10 +40,19 @@ $helperImage = new Default_View_Helper_Image();
 
 $imgUrl = $helperImage->Image($file_out,array('width' => $size, 'height' => $size));
 
+if($debugMe == 1) {
+    print_r('ImgUrl2: ' . $imgUrl);
+}
+
+
 $sizeString = '/'.$size.'x'.$size.'-2/';
 
 if (!strpos($imgUrl, $sizeString)) {
     $imgUrl = str_replace('/200x200-2/', $sizeString, $imgUrl);
+}
+
+if($debugMe == 1) {
+    print_r('ImgUrl3: ' . $imgUrl);
 }
 
 $ext = substr($imgUrl, -3);
@@ -63,6 +71,10 @@ switch ($ext) {
         break;
     default:
         $mime = false;
+}
+
+if($debugMe == 1) {
+    print_r('Mime: ' . $mime);
 }
 
 if ($mime) {
