--- a/application/modules/default/views/scripts/user/avatar.phtml
+++ b/application/modules/default/views/scripts/user/avatar.phtml
@@ -60,7 +60,7 @@ switch ($ext) {
     case 'jpg':
         $mime = 'image/jpeg';
         break;
-    case 'jpeg':
+    case 'jpe':
         $mime = 'image/jpeg';
         break;
     case 'gif':
