--- a/application/modules/default/views/scripts/user/avatar.phtml
+++ b/application/modules/default/views/scripts/user/avatar.phtml
@@ -70,7 +70,7 @@ switch ($ext) {
         $mime = 'image/png';
         break;
     default:
-        $mime = false;
+        $mime = 'image/png';
 }
 
 if($debugMe == 1) {
