--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -87,17 +87,25 @@ out: ../css/style.css, sourcemap: true, compress: true
 
           &#domains-dropdown-menu {
             position: relative;
+            cursor: pointer;
+            height: 60px;
+            z-index: 1000;
 
-            ul.dropdown-menu {
-              column-count: 2;
-              width: 350px;
-              top: 47px;
-              right: -200px;
+            &:hover {
+              .dropdown-menu {
+                display: block;
+              }
+            }
+
+            .dropdown-menu {
+              width: 400px;
+              top: 60px;
+              right: -250px;
 
               &::before {
                 content: "";
                 position: absolute;
-                right: 306px;
+                right: 356px;
                 top: -8px;
                 width: 0;
                 height: 0;
@@ -109,27 +117,34 @@ out: ../css/style.css, sourcemap: true, compress: true
                 z-index: 1;
               }
 
-              li {
-
-                a {
-                  padding: 3px 10px;
-                }
+              .submenu-container {
+                width: 50%;
+                float: left;
+                height: auto;
                 ul {
                   list-style-type: none;
                   padding: 0;
+                  margin: 0;
+
                   li {
                     a {
                       padding: 3px 20px;
                       font-size: 12px;
                       color: black;
                     }
+                    ul {
+                      margin-bottom: 10px;
+                      li {
+                        a {
+                          padding: 3px 30px;
+                        }
+                      }
+                    }
                   }
                 }
               }
-
             }
           }
-
         }
       }
 
