--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -138,6 +138,9 @@ out: ../css/style.css, sourcemap: true, compress: true
                         a {
                           padding: 3px 30px;
                         }
+                        &:hover {
+                          background-color: #eee;
+                        }
                       }
                     }
                   }
