--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -235,7 +235,7 @@ $this->inlineScript()->appendScript('
 
                                 <div class="form-group">
                                 <div class="col-sm-12 margin-top-15">
-                                 <?= $this->form->is_original ?>  This is my own original work not based on somthing else      
+                                 <?= $this->form->is_original ?>  Check this box, if this is your own original work and not based on something else      
                                 </div>
                                 </div>                               
                                 
