--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -2,6 +2,474 @@ out: ../css/style.css, sourcemap: true, compress: true
 
 @import "elements.less";
 
+#metaheader {
+  float: left;
+  width: 100%;
+  height: 42px;
+
+  #metaheader-nav {
+    width: 100%;
+    float: left;
+
+    .btn-metaheader {
+      padding: 0 12px !important;
+      border-radius: 2px !important;
+      color: white !important;
+      font-size: 12px !important;
+      height: 30px !important;
+      line-height: 30px !important;
+      font-weight: bold;
+      border: 1px solid #3079ed;
+      background: -webkit-linear-gradient(top, #4387fd, #4683ea);
+    }
+
+    ul.metaheader-menu {
+      padding: 0;
+      margin: 0;
+      list-style-type: none;
+
+      > li {
+        float: left;
+        padding: 9px 5px;
+
+        > a {
+          color: #6a7686;
+          border-radius: 5px;
+          padding: 5px;
+
+          &:active,
+          &:hover {
+            background-color: #eee;
+          }
+        }
+
+        &.active {
+
+          > a {
+            background-color: #eee;
+
+            img {
+              margin-right: 5px;
+            }
+          }
+        }
+
+        .dropdown-menu {
+          &::before {
+            content: "";
+            position: absolute;
+            right: 356px;
+            top: -8px;
+            width: 0;
+            height: 0;
+            border-style: solid;
+            border-width: 0 8.5px 8.5px;
+            border-color: transparent transparent #b7bcc4 transparent;
+            border-bottom-color: #fff;
+            border-style: dashed dashed solid;
+            z-index: 1;
+          }
+        }
+      }
+
+      &#domains-menu {
+        margin-left: 10px;
+
+        > li {
+          padding-left: 0;
+
+          > a {
+            margin: 0 10px 0 5px;
+          }
+
+          &::after {
+            content: "•";
+            color: #E2E2E2;
+          }
+
+          &:last-of-type {
+
+            &::after {
+              content: "";
+            }
+          }
+
+          &.dropdown {
+
+            > ul.dropdown-menu {
+              margin-left: 0;
+              margin-top: -9px;
+            }
+          }
+
+          &#domains-dropdown-menu {
+            position: relative;
+            cursor: pointer;
+            height: 60px;
+            z-index: 1000;
+
+            &:hover {
+              .dropdown-menu {
+                display: block;
+              }
+            }
+
+            .dropdown-menu {
+              width: 400px;
+              top: 60px;
+              right: -250px;
+
+              &::before {
+                right: 356px;
+              }
+
+              .submenu-container {
+                width: 50%;
+                float: left;
+                height: auto;
+                ul {
+                  list-style-type: none;
+                  padding: 0;
+                  margin: 0;
+
+                  li {
+                    a {
+                      padding: 3px 20px;
+                      font-size: 12px;
+                      color: black;
+                    }
+                    ul {
+                      margin-bottom: 10px;
+                      li {
+                        a {
+                          padding: 3px 30px;
+                        }
+                        &:hover {
+                          background-color: #eee;
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+
+          &#discussion-boards {
+            position: relative;
+            cursor: pointer;
+            height: 60px;
+            z-index: 1000;
+
+            .dropdown-menu {
+              width: 200px;
+              top: 60px;
+              right: -43px;
+
+              &::before {
+                right: 156px;
+              }
+            }
+          }
+        }
+      }
+
+      &#user-menu {
+        margin-right: 10px;
+
+        > li {
+
+          &#user-login-container {
+            padding: 5px;
+          }
+        }
+      }
+    }
+
+    .user-dropdown {
+      position: relative;
+
+      .dropdown-toggle {
+        padding: 0;
+        background-color: white;
+        color: #6a7686;
+
+        &:active {
+          background-color: white;
+          box-shadow: none;
+          outline: none;
+        }
+
+        .glyphicon {
+          font-size: 16px;
+          top: 1px;
+          font-style: normal;
+          font-weight: 100;
+          margin: 0 5px;
+        }
+      }
+
+      .dropdown-menu {
+        border-radius: 0;
+        padding: 0;
+        width: 320px;
+        top: 40px;
+        background: #fff;
+        border: 1px solid #ccc;
+        border-color: rgba(0,0,0,0.2);
+        color: #000;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+
+        &::before {
+          content: "";
+          position: absolute;
+          right: 6px;
+          top: -8px;
+          width: 0;
+          height: 0;
+          border-style: solid;
+          border-width: 0 8.5px 8.5px;
+          border-color: transparent transparent #b7bcc4 transparent;
+          border-bottom-color: #fff;
+          border-style: dashed dashed solid;
+          z-index: 1;
+        }
+
+        li {
+          float: left;
+        }
+      }
+    }
+
+    #user-context-menu-container {
+
+      .user-dropdown {
+
+        .dropdown-menu  {
+          padding: 23px 28px;
+          right: -42px;
+
+          &::before {
+            right: 45px;
+          }
+
+          li {
+            height: auto;
+            width: 86px;
+            border: 1px solid white;
+            margin: 5px 0;
+
+            a {
+              display: block;
+              width: 100%;
+              padding: 0;
+              height: auto;
+              float: left;
+
+              .icon {
+                width: 55px;
+                height: 55px;
+                margin: 10px auto;
+                background-size: 50px;
+                background-position: center center;
+                background-repeat: no-repeat;
+              }
+
+              span {
+                float: left;
+                width: 100%;
+                text-align: center;
+                display: block;
+                color:rgba(0,0,0,0.87);
+                font-size: 13px;
+              }
+
+              &:active {
+                background-color: white;
+              }
+            }
+
+            &#opendesktop-link-item {
+              a {
+                .icon {
+                  background-image: url('../img/logo-opendesktop.png');
+                }
+              }
+            }
+
+            &#discourse-link-item {
+              a {
+                .icon {
+                  background-image: url('../img/logo-discourse.png');
+                  background-size: 58px;
+                }
+              }
+            }
+
+            &#gitlab-link-item {
+              a {
+                .icon {
+                  background-image: url(../img/logo-gitlab.png);
+                }
+              }
+            }
+
+            &#opencode-link-item {
+              a {
+                .icon {
+                  background-image: url(../img/logo-opencode.png);
+                  background-size: 45px;
+                }
+              }
+            }
+
+            &:hover {
+              border:1px solid #e5e5e5;
+              a {
+                background-color: white;
+              }
+            }
+
+            &:active {
+              a {
+                background-color: white;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    #user-login-menu-container {
+      .user-dropdown {
+        .dropdown-toggle {
+          img {
+            height: 32px;
+            width: 32px;
+            border-radius: 100%;
+            margin-top: -4px;
+          }
+        }
+        .dropdown-menu {
+          #user-info-section {
+            height: auto;
+            padding: 20px;
+            background: white;
+            float: left;
+
+            .user-avatar {
+              height: 96px;
+              width: 96px;
+              float: left;
+              border-radius: 100%;
+              overflow: hidden;
+
+              .no-avatar-user-letter {
+                border-radius: 100%;
+                height: 100%;
+                width: 100%;
+                background-color: #c1c1c1;
+                text-align: center;
+                line-height: 80px;
+                font-size: 50px;
+                color: white;
+                overflow: hidden;
+                position: relative;
+
+                img {
+                  width: 100%;
+                }
+
+                .change-profile-pic {
+                  width: 100%;
+                  position: absolute;
+                  bottom: 0;
+                  font-size: 9px;
+                  height: 26px;
+                  left: 0;
+                  background-color: rgba(0,0,0,0.4);
+                  line-height: 30px;
+                  color: white;
+                  cursor: pointer;
+                  font-weight: bold;
+                }
+              }
+            }
+            .user-details {
+              width: 175px;
+              padding-left: 20px;
+              float: left;
+              margin-top: -4px;
+
+              ul {
+                padding: 0;
+                margin: 0;
+                list-style-type: none;
+                float: left;
+                width: 100%;
+
+                li {
+                  width: 100%;
+                  float: left;
+                  height: auto;
+                  line-height: 15px;
+                  font-size: 13px;
+                  min-height: 8px;
+                  color: #6a7686;
+
+                  a {
+                    color: #36c;
+                  }
+
+                  b {
+                    color: black;
+                  }
+
+                  button {
+                    margin-top: 16px;
+                  }
+                }
+              }
+            }
+          }
+          #main-seperator {
+            margin-top: 0;
+            margin-bottom: 0;
+            background-color: #ccc;
+          }
+          li.buttons {
+            padding: 10px 20px;
+            background-color: #f5f5f5;
+
+            .btn {
+              border-radius: 2px;
+              padding: 0 16px;
+              font-size: 12px;
+              height: 30px;
+              font-weight: normal;
+              color: #666 !important;
+              background: #f8f8f8;
+              border: 1px solid #c6c6c6;
+
+              &:hover {
+                -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+                box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+                border-color: #c6c6c6;
+                color: #222;
+                background-color: #fff;
+                background-image: -webkit-gradient(linear,left top,left bottom,from(#fff),to(#f8f8f8));
+                background-image: -webkit-linear-gradient(top,#fff,#f8f8f8);
+                background-image: -webkit-linear-gradient(top,#fff,#f8f8f8);
+                background-image: linear-gradient(top,#fff,#f8f8f8);
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 header {
 
   div.container.header {
@@ -9,44 +477,142 @@ header {
   }
 }
 
-#user-dropdown {
+.small.metamenu {
+  width: 100%;
+  background-color: #fff;
+  height: auto;
+  float: left;
 
-  .dropdown-menu {
-    width: 300px;
-    padding-top: 0;
-    overflow: hidden;
+  > ul {
+    &.left {
+      margin-left: 5px;
+    }
+    > li {
+      margin-top: 10px;
+    }
+  }
+}
 
-    #user-info-section {
-      height: 100px;
-      padding: 10px 20px;
-      background: #f8f8f8;
+.metaheader-menu-item {
+  margin: 5px 0;
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
 
-      .user-avatar {
-        width: 40%;
-        height: 80px;
-        width: 80px;
-        float: left;
+  #user-dropdown {
+    margin-bottom: 2px;
+    position: relative;
+    margin: 5px 0;
+    height: 32px;
+    width: 32px;
+    padding: 0;
 
-        .no-avatar-user-letter {
-          border-radius: 100%;
-          height: 100%;
-          width: 100%;
-          background-color: #c1c1c1;
-          text-align: center;
-          line-height: 80px;
-          font-size: 50px;
+    .dropdown-toggle {
+      padding: 0;
+      background-color: white;
+      color: #6a7686;
+      .transition();
+      height: 32px;
+      width: 32px;
+      overflow: hidden;
+
+      .glyphicon {
+        font-size: 16px;
+        top: 3px;
+        font-style: normal;
+        font-weight: 100;
+      }
+
+      img {
+        width: 100%;
+        height: 100%;
+        border-radius: 100%;
+      }
+
+      &:active {
+        box-shadow: none;
+        outline: none;
+      }
+
+    }
+
+    .dropdown-menu {
+      border-radius: 0;
+      padding: 0;
+      width: 320px;
+      top: 50px;
+      background: #fff;
+      border: 1px solid #ccc;
+      border-color: rgba(0,0,0,.2);
+      color: #000;
+      -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.2);
+      box-shadow: 0 2px 10px rgba(0,0,0,.2);
+
+      .btn-blue {
+        border-radius: 2px;
+        padding: 0 12px;
+        font-size: 12px;
+        height: 30px;
+        background: #4d90fe;
+        font-weight: bold;
+        border: 1px solid #3079ed;
+
+        &:hover {
+          background: #357ae8;
+          border-color: #2f5bb7;
           color: white;
+          box-shadow: 0 1px 1px rgba(0,0,0,0.2);
         }
       }
-      .user-details {
-        width: 175px;
-        padding-left: 20px;
-        float: left;
+
+
+      &::before {
+        content: "";
+        position: absolute;
+        right: 6px;
+        top: -8px;
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 0 8.5px 8.5px;
+        border-color: transparent transparent #b7bcc4 transparent;
+        border-bottom-color: #fff;
+        border-style: dashed dashed solid;
+        z-index: 1;
       }
     }
 
-    #main-seperator {
-      margin-top: 0;
+  }
+
+  &#user-context-dropdown-container {
+
+  }
+
+  &#user-signin-button {
+    padding-top: 6px;
+
+      a {
+        padding: 0;
+        font-size: 13px;
+        display: block;
+        height: 30px;
+        line-height: 30px;
+        color: white;
+
+        .btn-blue {
+          padding: 0 12px;
+          border-radius: 2px;
+          font-size: 12px;
+          height: 30px;
+          background: #4d90fe;
+          font-weight: bold;
+          border: 1px solid #3079ed;
+          background: -webkit-linear-gradient(top,#4387fd,#4683ea);
+
+          &:hover {
+            color: white;
+          }
+
+      }
     }
   }
 }
