--- a/application/modules/default/views/scripts/user/aboutme.phtml
+++ b/application/modules/default/views/scripts/user/aboutme.phtml
@@ -331,7 +331,7 @@ $isSupporter = $this->stat['donationIssupporter'];
                             </div>
 
                             <?php if($this->stat['cntFProducts']>0){ ?>
-                                <div role="tabpanel" class="tab-pane active" id="user-featuredproducts">
+                                <div role="tabpanel" class="tab-pane " id="user-featuredproducts">
                                     <?php 
                                            $this->userProducts = $this->userFeaturedProducts;
                                         if ($this->userProducts) { ?>                                
